--- a/404.html
+++ b/404.html
@@ -3,7 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Moe Serifu :: 404 Page not found</title>
-		<link rel="stylesheet" href="/styles/main.css" />
+		<meta property="og:image" content="http://www.moeserifu.moe/images/masachan-head.png" />
+		<meta property="og:image:width" content="400" />
+		<meta property="og:image:height" content="400" />
+		<meta property="og:site_name" content="Moe Serifu Agent" />
+		<meta property="og:title" content="404 Page not found" />
+		<meta property="og:url" content="" />
+		<meta property="og:type" content="website" />
+				<link rel="stylesheet" href="/styles/main.css" />
 		<link rel="stylesheet" href="/styles/wrap3col.css" />
 		<link rel="stylesheet" href="/styles/hf-side.css" />
 		<link rel="shortcut icon" href="/favicon.ico" />
