Front page panels are now clickable

--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
 <main>
 	<h1>Personal Assistant &amp; Companion</h1>
 	<div class="panels-container"><article class="panel">
-			<h1>Automation</h1>
+			<h1><a href="/about">Automation</a></h1>
 			<div class="panel-back-0">
-				<img src="/images/masa-automation.png" />
+				<a href="/about"><img src="/images/masa-automation.png" /></a>
 			</div>
 		</article><article class="panel">
-			<h1>Conversation</h1>
+			<h1><a href="/about">Conversation</a></h1>
 			<div class="panel-back-1">
-				<img src="/images/masa-conversation.png" />
+				<a href="/about"><img src="/images/masa-conversation.png" /></a>
 			</div>
 		</article><article class="panel">
-			<h1>Free &amp; Open Source</h1>
+			<h1><a href="/about">Free &amp; Open Source</a></h1>
 			<div class="panel-back-2">
-				<img src="/images/masa-opensource.png" />
+				<a href="/about"><img src="/images/masa-opensource.png" /></a>
 			</div>
 		</article>
 	</div>
