Added better og:description tags

--- a/about/index.html
+++ b/about/index.html
@@ -10,6 +10,9 @@
 		<meta property="og:title" content="About" />
 		<meta property="og:url" content="http://www.moeserifu.moe/about/" />
 		<meta property="og:type" content="website" />
+		<meta property="og:description" content="Oh! Hi there, Master! My name is Masa-chan, and I&rsquo;m your personal maid! I&rsquo;m here
+to tell you all about the Moe Serifu Agent system, and what it can do for you.
+I&rsquo;m so happy to meet you. I hope we can be friends!"/>
 				<link rel="stylesheet" href="/styles/main.css" />
 		<link rel="stylesheet" href="/styles/wrap3col.css" />
 		<link rel="stylesheet" href="/styles/hf-side.css" />
@@ -174,7 +177,6 @@ can create new features or plugins for me to use.</p>
 in person!</p>
 
 <p><em>&mdash; Masa-chan, MSA Mascot</em></p>
-
 	</article>
 </main>
 
