--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta property="og:title" content="Personal Assistant &amp; Companion" />
 		<meta property="og:url" content="http://www.moeserifu.moe/" />
 		<meta property="og:type" content="website" />
+		<meta property="og:description" content="I'm a 2D maid that works in your home! A team of coders is bringing me to life for free!"/>
 				<link rel="stylesheet" href="/styles/main.css" />
 		<link rel="stylesheet" href="/styles/wrap3col.css" />
 		<link rel="stylesheet" href="/styles/hf-side.css" />
