Fixed image and og titles

--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Moe Serifu :: About</title>
+		<meta property="og:title" content="Moe Serifu :: About" />
 		<meta property="og:image" content="http://www.moeserifu.moe/images/masachan-head.png" />
 		<meta property="og:image:width" content="400" />
 		<meta property="og:image:height" content="400" />
 		<meta property="og:site_name" content="Moe Serifu Agent" />
-		<meta property="og:title" content="About" />
 		<meta property="og:url" content="http://www.moeserifu.moe/about/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="Oh! Hi there, Master! My name is Masa-chan, and I&rsquo;m your personal maid! I&rsquo;m here
