--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@
 						<h2 id="tagline">Cuteness &amp; Curiosity</h2>
 					</div>
 					<img class="logo" src="/images/chibi.png" />
-					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a  href="/about/">About</a>
+					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a  href="/about/">About</a><a  href="/join/">Join the Crew</a>
 					</nav>
 					
 				</div>
