--- a/about/index.html
+++ b/about/index.html
@@ -85,7 +85,7 @@ I&rsquo;m so happy to meet you. I hope we can be friends!"/>
 						<h2 id="tagline">Cuteness &amp; Curiosity</h2>
 					</div>
 					<img class="logo" src="/images/chibi.png" />
-					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a class="current-menu-item" href="/about/">About</a>
+					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a class="current-menu-item" href="/about/">About</a><a  href="/join/">Join the Crew</a>
 					</nav>
 					
 				</div>
