Fixed broken dates, favicon. Added minutes/docs section

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 				<link rel="stylesheet" href="/styles/main.css" />
 		<link rel="stylesheet" href="/styles/wrap3col.css" />
 		<link rel="stylesheet" href="/styles/hf-side.css" />
-		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 		<link rel="alternate" type="application/atom+xml" title="News Feed" href="http://www.moeserifu.moe/index.xml" />
@@ -83,7 +83,7 @@
 						<h2 id="tagline">Cuteness &amp; Curiosity</h2>
 					</div>
 					<img class="logo" src="/images/chibi.png" />
-					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a  href="/about/">About</a><a  href="/join/">Join the Crew</a>
+					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a  href="/about/">About</a><a  href="/docs/">Documents</a><a  href="/join/">Join the Crew</a>
 					</nav>
 					
 				</div>
