--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@ I&rsquo;m so happy to meet you. I hope we can be friends!"/>
 				<link rel="stylesheet" href="/styles/main.css" />
 		<link rel="stylesheet" href="/styles/wrap3col.css" />
 		<link rel="stylesheet" href="/styles/hf-side.css" />
-		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 		<link rel="alternate" type="application/atom+xml" title="News Feed" href="http://www.moeserifu.moe/index.xml" />
@@ -85,7 +85,7 @@ I&rsquo;m so happy to meet you. I hope we can be friends!"/>
 						<h2 id="tagline">Cuteness &amp; Curiosity</h2>
 					</div>
 					<img class="logo" src="/images/chibi.png" />
-					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a class="current-menu-item" href="/about/">About</a><a  href="/join/">Join the Crew</a>
+					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a class="current-menu-item" href="/about/">About</a><a  href="/docs/">Documents</a><a  href="/join/">Join the Crew</a>
 					</nav>
 					
 				</div>
