--- a/join/index.html
+++ b/join/index.html
@@ -12,11 +12,11 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="Interested in joining Moe Serifu Circle? We are looking for volunteers to become contributors to the project! All levels of skill are accepted.
 If you would like to help out, join the crew&rsquo;s Facebook group, or sign up at our Google form.
-The general time committment is attending a meeting once every two weeks. If you are in the area, physical presence is preferred, but if you can&rsquo;t make it, that&rsquo;s alright!"/>
+The general time commitment is attending a meeting once every two weeks. If you are in the area, physical presence is preferred, but if you can&rsquo;t make it, that&rsquo;s alright!"/>
 				<link rel="stylesheet" href="/styles/main.css" />
 		<link rel="stylesheet" href="/styles/wrap3col.css" />
 		<link rel="stylesheet" href="/styles/hf-side.css" />
-		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 		<link rel="alternate" type="application/atom+xml" title="News Feed" href="http://www.moeserifu.moe/index.xml" />
@@ -85,7 +85,7 @@ The general time committment is attending a meeting once every two weeks. If you
 						<h2 id="tagline">Cuteness &amp; Curiosity</h2>
 					</div>
 					<img class="logo" src="/images/chibi.png" />
-					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a  href="/about/">About</a><a class="current-menu-item" href="/join/">Join the Crew</a>
+					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a  href="/about/">About</a><a  href="/docs/">Documents</a><a class="current-menu-item" href="/join/">Join the Crew</a>
 					</nav>
 					
 				</div>
@@ -149,7 +149,7 @@ become contributors to the project! All levels of skill are accepted.</p>
 <p>If you would like to help out, join the crew&rsquo;s <a href="https://www.facebook.com/groups/MoeSerifuCircle">Facebook group</a>,
 or sign up at our <a href="https://goo.gl/forms/64xkgwX9hYDz18CX2">Google form</a>.</p>
 
-<p>The general time committment is attending a meeting once every two weeks. If
+<p>The general time commitment is attending a meeting once every two weeks. If
 you are in the area, physical presence is preferred, but if you can&rsquo;t make it,
 that&rsquo;s alright! You can join the meetings online as well.</p>
 
@@ -157,7 +157,7 @@ that&rsquo;s alright! You can join the meetings online as well.</p>
 
 <ul>
 <li><strong>Programming</strong> - The project is currently primarily written in C++, but this may
-change as we expand into different libraries for visualiztion.</li>
+change as we expand into different libraries for visualization.</li>
 <li><strong>Art</strong> - We need art both for promotion of the project, as well as the actual
 system itself. Masa-chan needs artists to help bring her to life!</li>
 <li><strong>Administration</strong> - Moe Serifu Circle is in the process of becoming a Non-Profit
@@ -165,7 +165,7 @@ organization, and we need members who can sit on the board of directors and help
 guide the overall operations of the group.</li>
 <li><strong>Social Media</strong> - We maintain a presence on Facebook as the circle itself,
 and we&rsquo;re on Twitter as <a href="https://www.twitter.com/MoeSerifu">Masa-chan</a>. We can
-always use more help making it fun adn engaging for the general public.</li>
+always use more help making it fun and engaging for the general public.</li>
 </ul>
 
 <p>Thank you for your interest!</p>
