--- a/minutes/index.html
+++ b/minutes/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Moe Serifu :: Categories</title>
-		<meta property="og:title" content="Moe Serifu :: Categories" />
+		<title>Moe Serifu :: Minutes</title>
+		<meta property="og:title" content="Moe Serifu :: Minutes" />
 		<meta property="og:image" content="http://www.moeserifu.moe/images/masachan-head.png" />
 		<meta property="og:image:width" content="400" />
 		<meta property="og:image:height" content="400" />
 		<meta property="og:site_name" content="Moe Serifu Agent" />
-		<meta property="og:url" content="http://www.moeserifu.moe/categories/" />
+		<meta property="og:url" content="http://www.moeserifu.moe/minutes/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="I'm a 2D maid that works in your home! A team of coders is bringing me to life for free!"/>
 				<link rel="stylesheet" href="/styles/main.css" />
@@ -83,7 +83,7 @@
 						<h2 id="tagline">Cuteness &amp; Curiosity</h2>
 					</div>
 					<img class="logo" src="/images/chibi.png" />
-					<nav><a  href="/">Home</a><a class="current-menu-item" href="/posts/">Blog</a><a  href="/about/">About</a><a  href="/docs/">Documents</a><a  href="/join/">Join the Crew</a>
+					<nav><a  href="/">Home</a><a  href="/posts/">Blog</a><a  href="/about/">About</a><a  href="/docs/">Documents</a><a  href="/join/">Join the Crew</a>
 					</nav>
 					
 				</div>
@@ -138,14 +138,10 @@
 					<div class="wrap3col-mid content-wrap">
 						
 <main>
-	<div class="breadcrumbs">
-		<a href="/posts">Blog</a> &raquo;
-	</div>
-	<h1 class="after-breadcrumbs">Categories</h1>
+	<h1>Minutes</h1>
 	
 	<hr />
-	<ul class="font-sans-title"><li><a href="/categories/news">News</a> &mdash; 2 Pages</li>
-		<li><a href="/categories/minutes">Minutes</a> &mdash; 1 Page</li>
+	<ul class="font-sans-title"><li>2018-01-09 &mdash; <a href="/minutes/2018-01-09/">(Interim) Board Meeting Summary - 2018-01-09</a></li>
 		
 	</ul>
 </main>
