--- a/minutes/index.html
+++ b/minutes/index.html
@@ -141,7 +141,8 @@
 	<h1>Minutes</h1>
 	
 	<hr />
-	<ul class="font-sans-title"><li>2018-01-09 &mdash; <a href="/minutes/2018-01-09/">(Interim) Board Meeting Summary - 2018-01-09</a></li>
+	<ul class="font-sans-title"><li>2018-03-31 &mdash; <a href="/minutes/2018-03-31/">(Interim) Board Meeting Summary - 2018-03-31</a></li>
+		<li>2018-01-09 &mdash; <a href="/minutes/2018-01-09/">(Interim) Board Meeting Summary - 2018-01-09</a></li>
 		
 	</ul>
 </main>
