Removed link to google form for signing up

--- a/join/index.html
+++ b/join/index.html
@@ -11,8 +11,8 @@
 		<meta property="og:url" content="http://www.moeserifu.moe/join/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="Interested in joining Moe Serifu Circle? We are looking for volunteers to become contributors to the project! All levels of skill are accepted.
-If you would like to help out, join the crew&rsquo;s Facebook group, or sign up at our Google form.
-The general time commitment is attending a meeting once every two weeks. If you are in the area, physical presence is preferred, but if you can&rsquo;t make it, that&rsquo;s alright!"/>
+If you would like to help out, join the crew&rsquo;s Discord.
+The general time commitment is attending a meeting once every two weeks. If you are in the area, physical presence is preferred, but if you can&rsquo;t make it, that&rsquo;s alright! You can join the meetings online as well."/>
 				<link rel="stylesheet" href="/styles/main.css" />
 		<link rel="stylesheet" href="/styles/wrap3col.css" />
 		<link rel="stylesheet" href="/styles/hf-side.css" />
@@ -146,8 +146,7 @@ The general time commitment is attending a meeting once every two weeks. If you 
 		<p>Interested in joining Moe Serifu Circle? We are looking for volunteers to
 become contributors to the project! All levels of skill are accepted.</p>
 
-<p>If you would like to help out, join the crew&rsquo;s <a href="https://www.facebook.com/groups/MoeSerifuCircle">Facebook group</a>,
-or sign up at our <a href="https://goo.gl/forms/64xkgwX9hYDz18CX2">Google form</a>.</p>
+<p>If you would like to help out, join the crew&rsquo;s <a href="https://discord.gg/URAA8SF">Discord</a>.</p>
 
 <p>The general time commitment is attending a meeting once every two weeks. If
 you are in the area, physical presence is preferred, but if you can&rsquo;t make it,
